# harnesskit

./: .gitignore  .pre-commit-hooks.yaml  COMPOUND.md  PUBLISH.md  README.md  SPEC.md  action.yml  hk.py  hk_mcp.py  hk_wrapper.py  pyproject.toml  test_hk.py  test_mcp.py  test_wrapper.py
benchmarks/: 001_whitespace_mismatch_rust_visibility.json  002_whitespace_mismatch_python_spaces.json  003_stale_context_variable_rename.json  004_partial_match_incomplete_function.json  005_indentation_drift_mixed_tabs_spaces.json  006_line_number_off_import_insertion.json  007_encoding_unicode_normalization.json  008_whitespace_mismatch_trailing_spaces.json  009_stale_context_react_component.json  010_partial_match_sql_query.json  011_indentation_drift_yaml_config.json  012_whitespace_mismatch_go_interface.json  013_stale_context_css_class_rename.json  014_partial_match_json_config.json  015_line_number_off_function_insertion.json  016_encoding_invisible_characters.json  017_whitespace_mismatch_markdown.json  018_stale_context_docker_compose.json  019_partial_match_rust_macro.json  020_indentation_drift_xml_nested.json  021_line_number_off_comment_insertion.json  022_encoding_line_endings.json  023_whitespace_mismatch_php_array.json  024_stale_context_terraform.json  025_partial_match_c_struct.json  026_indentation_drift_makefile.json  027_line_number_off_class_method.json  028_encoding_bom_issue.json  029_whitespace_mismatch_powershell.json  030_partial_match_kotlin_data_class.json  031_stale_context_multi-function_stale_context_with_class_.json  032_stale_context_comment_drift_with_added_docstrings.json  033_whitespace_mismatch_trailing_comma_style_mismatch.json  034_stale_context_python_decorator_stale_context.json  (+20 more)
examples/: README.md  (+3 more)
(+2 files in other folders)
