[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "harnesskit"
version = "0.1.0"
description = "Fuzzy edit tool for LLM coding agents — never fail a str_replace again"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "Alex Melges", email = "alex@melges.dev"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/alexmelges/harnesskit"
Repository = "https://github.com/alexmelges/harnesskit"

[project.scripts]
hk = "hk:main"

[tool.setuptools]
py-modules = ["hk"]
